@@ -1,5 +1,7 @@
 = HEAD
 
+* Add delay method to chunked plugin, for delaying a block execution until right before content template rendering (jeremyevans)
+
 * Have default Content-Type header when using the default_headers plugin (jeremyevans)
 
 * Add :by_name option to the path plugin, for registering classes by name, useful when reloading code (jeremyevans)
